k8s/startup/netpol/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: kube-public
spec:
  containers:
  - name: alpine
    image: reg.ntl.nc/proxy/library/alpine:latest
    # Just spin & wait forever
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
